--- a/FragementAnimation/AndroidManifest.xml
+++ b/FragementAnimation/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity android:name=".MainActivity">
-            <intent-filter >
+            <intent-filter android:logo="@drawable/ic_launcher">
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
